css/style.css
/* RESET */

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* UTILITY */

.flex{
    display: flex;
}

.flex-wrap{
    flex-wrap: wrap;
}

.flex-around{
    justify-content: space-around;
}

.flex-column{
    flex-direction: column;
    justify-content: space-between;
}

:root{
    
}

/* css header */

header{
    background-color: black;
    height: calc(100vh - 100px);
    width: 230px;

}

section#section-top-header{
    background-color: lime;
    height: 400px;
}

section#section-bottom-header{
    background-color: blue;
    height: 50px;
}

/* css main */

main{
    background-color: red;
    width: calc(100% - 230px);
}

section#upgrade{
    background-color: #080b12;
    height: 80px;
}

section#list{
    background-color: green;
    height: 30px;
}

section.row{
    margin-top: 3rem;
}

article.album{
    background-color: cyan;
    height: 200px;
    width: 200px;
    margin: .5rem;
}



/* css footer */

footer{
    background-color: yellow;
    height: 100px;
    width: 100%;
}


/* RESPONSIVE !!!! */

/* X-LARGE */
@media screen and (max-width: 1400px){

}

/* MEDIUM */
@media screen and (max-width: 878px){

    article.album{
        flex-wrap: wrap;
    }
}

/* SMALL */
@media screen and (max-width: 639px){

}

/* X-SMALL */
@media screen and (max-width: 552px){

    header{
        width: 70px;
    }

    main{
        width: calc(100% - 70px);
    }
}

